# ROS2

./: .gitignore
src/cvtask/: CMakeLists.txt  package.xml
src/cvtask/src/: camera_sub.cpp  pub.cpp  sub.cpp  video_pub.cpp  video_sub.cpp
src/cvtask/src/basic/: image.cpp  video.cpp  webcam.cpp
src/cvtask/src/funtions/: basicfuntions.cpp  color_detections.cpp  draw_text.cpp  resize_crop.cpp  shape_detections.cpp  warp.cpp
src/cvtask/src/task/: pnp.cpp  task.cpp
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/srv/: Process.srv
src/service/: CMakeLists.txt  package.xml
src/service/src/: client.cpp  server.cpp
